--- a/packages/reactor-fiber-boilerplate/package.json
+++ b/packages/reactor-fiber-boilerplate/package.json
@@ -12,20 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@extjs/ext-react": "^6.5.0",
+    "@extjs/ext-react": "^6.5.1",
     "@extjs/reactor-fiber": "^0.2.12",
-    "react": "^16.0.0-alpha.12",
-    "react-dom": "^16.0.0-alpha.12"
+    "react": "^16.0.0-beta.1",
+    "react-dom": "^16.0.0-beta.1"
   },
   "devDependencies": {
-    "@extjs/reactor-webpack-plugin": "^0.2.12",
+    "@extjs/reactor-webpack-plugin": "^1.1.0",
+    "ast-traverse": "^0.1.1",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
     "html-webpack-plugin": "^2.24.1",
-    "webpack": "^2.2.1",
+    "webpack": "^3.4.1",
     "webpack-dev-server": "^2.4.1"
   }
 }
